--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="haslo">
         hasło...
     </div>
+    <div id="kategoria">
+
+    </div>
     <div id="litera">
         <input type="text" id="znak" size="1" maxlength="1" onkeyup="sprawdz()" autofocus>
     </div>
